2003-06-18  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/editorpane.tcl (init_tags, color_file):
	Add basic local variable highlighting support.
	Add lv to the list of symbols that has a highlight
	tag created for it in the editor. Remove lv
	from the list of symbols that is filtered out
	before being added to the editor in color_file.
	There does not seem to be any reason to filter
	out lv entries, most compilers do not generate
	them and they and having locals highlighted can't
	hurt.
	* gui/preferences.tcl (AddColorAndFont): Add
	color config option for local variables.
	* gui/sninit.tcl (sn_init_globals): Add default
	of turquoise3 for local variable highlight.

2003-06-18  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/preferences.tcl (AddOthers): Remove
	the "bugs" labeled frame and the mailhost
	entry box from the others tab. These widgets
	were not functional, they were left in the
	5.1 release just to avoid doc impact.

2003-06-17  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/preferences.tcl: Reformat a large number
	of entries to make them readable. Running the
	code through frink resulted in code that was
	very difficult to understand.

2003-06-16  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/editorpane.tcl (Sn_Highlight_Text):
	Create Tcl only implementation of the
	Sn_Highlight_Text C command. This
	implementation makes the highlight a file
	operation about 30% slower, but this should
	not even be noticeable.
	* gui/tclIndex: Regen.
	* hyper/exint.c (Sn_Highlight_Text): Remove
	C impl of Sn_Highlight_Text.
	* hyper/sninit.c (sn_init_mycommands): Remove
	define if Sn_Highlight_Text Tcl command.
	* misc/libutils/mxfuncs.h: Remove
	Sn_Highlight_Text declaration.
	* tests/gui/editorpane.test: Add test cases
	for Sn_Highlight_Text.

2003-06-16  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/php/phpbrowser.c: Regen.
	* parsers/php/phpbrowser.l: Rework the
	highlight writing logic. Instead of